--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ rvm:
   - 2.6.3
 
 before_install:
-  - gem install 
+  - gem install bundler
 
 install:
   - bundle install --without production --path=${BUNDLE_PATH:-vendor/bundle}
